内存模型修改